# sfirah

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
sfirah/: __init__.py  flax_s4.py  flax_transformer.py  ids4.py  layers.py  metrics.py  mlp.py  rnn.py  rwkv.py  s4.py  ssm.py  transformers.py  utils.py
tests/: __init__.py  test_flax.py  test_ids4.py  test_metrics.py  test_models.py  test_nc1attn.py
