[tool.poetry]
name = "sfirah"
version = "0.1.0"
description = ""
authors = ["Jackson Petty <research@jacksonpetty.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.0"
numpy = ">=1.25"
tqdm = "^4.66"
packaging = "^23.2"
causal-conv1d = "^1.1"
mamba-ssm = ">1.0"
s4torch = { git = "https://github.com/TariqAHassan/s4torch" }

[tool.poetry.dev-dependencies]
pre-commit = "^3.4"
python-dotenv = "^1.0"

[build-system]
requires = ["poetry-core", "packaging", "wheel"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["D", "E", "F", "I", "N"]
line-length = 88
target-version = "py310"

[tool.ruff.pydocstyle]
convention = "google"
