[tool.poetry]
name = "sfirah"
version = "0.1.0"
description = ""
authors = ["Jackson Petty <research@jacksonpetty.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.0"
numpy = ">=1.25"
tqdm = "^4.66"
jax = "^0.4"
flax = "^0.8"
packaging = { version = "^23.2", optional = true }
causal-conv1d =  { version = "^1.1", optional = true }
mamba-ssm = { version = ">1.0", optional = true }
s4 = { git = "https://github.com/jopetty/s4.git" }

[tool.poetry.extras]
ssm = ["packaging", "causal-conv1d", "mamba-ssm"]

[tool.poetry.dev-dependencies]
pre-commit = "^3.4"
python-dotenv = "^1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["D", "E", "F", "I", "N"]
line-length = 88
target-version = "py310"

[tool.ruff.pydocstyle]
convention = "google"
